<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F6F5F5"
    android:layout_height="match_parent">

    <View
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginEnd="100dp"
        android:background="@color/yellow"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/singUp_title"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/button_signUp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingEnd="30dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:background="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/signUp_hint_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColorHint="@color/grayLight"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/signUp_hint_password"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColorHint="@color/grayLight"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/signUp_hint_email"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColorHint="@color/grayLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp_login"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

</androidx.constraintlayout.widget.ConstraintLayout>